--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-i18next": "^11.18.5", 
+    "i18next": "^23.1.0",         
+    "i18next-browser-languagedetector": "^6.1.0",
+    "i18next-http-backend": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
