--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,7 +14,8 @@
     "i18next": "^23.1.0",         
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-http-backend": "^1.3.1",
-    "react-router-dom": "^6.0.0"
+    "react-router-dom": "^6.0.0",
+    "axios":"^1.7.9"
   },
   "scripts": {
     "start": "react-scripts start",
