--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,16 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "react-i18next": "^11.18.5", 
-    "i18next": "^23.1.0",         
+    "axios": "^1.7.9",
+    "i18next": "^23.1.0",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-http-backend": "^1.3.1",
+    "postcss": "^8.4.49",
+    "postcss-preset-env": "^10.1.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-i18next": "^11.18.5",
     "react-router-dom": "^6.0.0",
-    "axios":"^1.7.9"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
