fix: https egiteko docker

--- a/Frontend/default.conf
+++ b/Frontend/default.conf
@@ -2,6 +2,17 @@ server {
   listen 80;
   server_name 0.0.0.0;
   
+  # Redirigir todo el tráfico HTTP a HTTPS
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 ssl;
+  server_name 0.0.0.0;
+
+  ssl_certificate /etc/ssl/nginx.crt;  # Ruta al certificado SSL
+  ssl_certificate_key /etc/ssl/nginx.key;  # Ruta a la clave privada SSL
+
   root /var/www/html;
   index index.html index.htm;
 
