--- a/Frontend/docker-compose.yml
+++ b/Frontend/docker-compose.yml
@@ -2,9 +2,10 @@ services:
   web:
     # versión
     image: nginx:latest
-    # Puerto 8080 
+    # Puerto 443 
     ports:
-      - "80:80"
+      - "443:443"  # Cambiar de 80 a 443 para HTTPS
     volumes:
       - ./build:/var/www/html
       - ./default.conf:/etc/nginx/conf.d/default.conf
+      - ./ssl:/etc/ssl  # Monta la carpeta SSL
