--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "postcss-preset-env": "^10.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-ga4": "^2.1.0",
     "react-i18next": "^11.18.5",
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
