haber si funciona

--- a/Backend/docker/nginx/default.conf
+++ b/Backend/docker/nginx/default.conf
@@ -1,34 +1,30 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name bastbackend.ddns.net;
 
-    # Redirige todo el tráfico HTTP a HTTPS
+    # Redirigir a HTTPS
     return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name localhost;
+    server_name bastbackend.ddns.net;
 
-    # Ruta al certificado SSL y clave privada
-    ssl_certificate /etc/nginx/certs/server.crt;
-    ssl_certificate_key /etc/nginx/certs/server.key;
+    # Configura el path de tus certificados SSL
+    ssl_certificate /etc/ssl/certs/your-certificate.crt;
+    ssl_certificate_key /etc/ssl/private/your-certificate-key.key;
 
-    # Configuraciones de seguridad recomendadas
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers 'TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384';
-    ssl_prefer_server_ciphers on;
-
-    root /var/www/html/public;  # Laravel debería estar en /var/www/html
+    # Configuración del root y la index
+    root /var/www/html/public;
     index index.php index.html index.htm;
 
-    # Rutas y reglas para manejar las solicitudes
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
 
     location ~ \.php$ {
-        fastcgi_pass php:9000;
+        fastcgi_pass laravel-app:9000;
+        fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME /var/www/html$document_root$fastcgi_script_name;
         include fastcgi_params;
     }
