--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -1,30 +1,32 @@
-version: '3.7'
-
+version: '3.8'
 services:
-  # Contenedor para PHP-FPM (Laravel)
-  app:
-    image: php:8.1-fpm
+  laravel-app:
+    image: laravel:latest
     container_name: laravel-app
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
-      - ./src:/var/www/html
+      - .:/var/www/html
     networks:
-      - laravel-net
-    # La configuración de la base de datos se define en el archivo .env de Laravel
+      - backend
+    expose:
+      - "9000"
 
-  # Contenedor de Nginx con configuración SSL
-  nginx:
+  nginx-server:
     image: nginx:latest
     container_name: nginx-server
-    volumes:
-      - ./src:/var/www/html
-      - ./docker/nginx:/etc/nginx/certs
-      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
-      - "443:443"
-      - "80:80"
+      - "80:80"   # Puerto HTTP
+      - "443:443" # Puerto HTTPS
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - .:/var/www/html
+    depends_on:
+      - laravel-app
     networks:
-      - laravel-net
+      - backend
 
 networks:
-  laravel-net:
+  backend:
     driver: bridge
