--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - "80:80"   # Puerto HTTP
       - "443:443" # Puerto HTTPS
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - .:/var/www/html
     depends_on:
       - laravel-app
