--- a/Backend/docker/nginx/default.conf
+++ b/Backend/docker/nginx/default.conf
@@ -12,7 +12,7 @@ server {
 
     # Configura el path de tus certificados SSL
     ssl_certificate /etc/ssl/certs/your-certificate.crt;
-    ssl_certificate_key /etc/ssl/private/your-certificate-key.key;
+    ssl_certificate_key /etc/ssl/private/your-certificate.key;
 
     # Configuración del root y la index
     root /var/www/html/public;
@@ -25,7 +25,7 @@ server {
     location ~ \.php$ {
         fastcgi_pass laravel-app:9000;
         fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME /var/www/html$document_root$fastcgi_script_name;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
 
