--- a/Backend/docker/nginx/default.conf
+++ b/Backend/docker/nginx/default.conf
@@ -28,6 +28,12 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
     }
+    
+    location /storage/ {
+        try_files $uri $uri/ =404;
+        root /var/www/html/public;
+    }
+
 
     location ~ /\.ht {
         deny all;
