--- a/Backend/docker/nginx/default.conf
+++ b/Backend/docker/nginx/default.conf
@@ -23,9 +23,9 @@ server {
     }
 
     location /storage/ {
-        try_files $uri $uri/ =404;
-        root /var/www/html/public;
+        alias /var/www/html/storage/app/public/;
     }
+
     location ~ \.php$ {
         fastcgi_pass laravel-app:9000;
         fastcgi_index index.php;
