add: redirection from 8000 to 443

--- a/Backend/docker/nginx/default.conf
+++ b/Backend/docker/nginx/default.conf
@@ -7,6 +7,14 @@ server {
 }
 
 server {
+    listen 8000;
+    server_name bastbackend.ddns.net;
+
+    # Redirigir todo tráfico HTTP (en el puerto 8000) a HTTPS
+    return 301 https://$host$request_uri;
+}
+
+server {
     listen 443 ssl;
     server_name bastbackend.ddns.net;
 
