--- a/Backend/docker-compose.yml
+++ b/Backend/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     ports:
       - "80:80"   # Puerto HTTP
       - "443:443" # Puerto HTTPS
+      - "8000:8000" # Irudien portua
     volumes:
       - ./docker/nginx/default.conf:/etc/nginx/conf.d/default.conf
       - ./docker/nginx/your-certificate.crt:/etc/ssl/certs/your-certificate.crt
