irudiekin zegon arazoa konponduta

--- a/Backend/docker/nginx/default.conf
+++ b/Backend/docker/nginx/default.conf
@@ -22,6 +22,11 @@ server {
     ssl_certificate /etc/ssl/certs/your-certificate.crt;
     ssl_certificate_key /etc/ssl/private/your-certificate.key;
 
+
+    # Max size
+    client_max_body_size 20M;
+
+
     # Configuración del root y la index
     root /var/www/html/public;
     index index.php index.html index.htm;
