add: relative ruts

--- a/Frontend/default.conf
+++ b/Frontend/default.conf
@@ -20,6 +20,6 @@ server {
   access_log /var/log/nginx/access.log;
 
   location / {
-    try_files $uri $uri/ =404;
+    try_files $uri $uri/ /index.html;  # Si no se encuentra la ruta, redirige a index.html
   }
 }
